<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_neai_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/neai_logo" />

        <!-- Title and Settings Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/st_neaiAnomalyDetection_text_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:rotation="90"
                android:src="@drawable/ic_gear_ai" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/st_neaiAnomalyDetection_text_commands"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/neai_commands_expand_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_arrow_up" />
        </LinearLayout>

        <!-- NEAI Commands Layout -->
        <LinearLayout
            android:id="@+id/neai_commands_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resource_busy_tx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/st_neaiAnomalyDetection_text_resourceBusy"
                android:visibility="gone"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/st_neaiAnomalyDetection_text_learning"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/learning_detecting_cb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/st_neaiAnomalyDetection_text_detecting"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/reset_knowledge_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/st_neaiAnomalyDetection_action_resetKnowledge"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    app:backgroundTint="@color/WarningBackground" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/start_stop_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/st_neaiAnomalyDetection_action_start"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- Separator -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorGrey"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_article" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/st_neaiAnomalyDetection_text_library"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/neai_library_expand_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_arrow_down" />
        </LinearLayout>

        <!-- NEAI Library Layout -->
        <LinearLayout
            android:id="@+id/neai_library_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="14sp"
                android:gravity="center"
                android:text="@string/st_neaiAnomalyDetection_text_workingProgress"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Separator -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorGrey"
            android:orientation="horizontal"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="left"
            android:text="@string/st_neaiAnomalyDetection_text_aiengineTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <!-- Phase -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/st_neaiAnomalyDetection_text_phaseTitle"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_phase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:text="@string/st_neaiAnomalyDetection_aiengine_phase_idle"
                android:textSize="17sp"
                android:textStyle="italic" />
        </LinearLayout>

        <!-- State -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/st_neaiAnomalyDetection_text_stateTilte"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:text="@string/st_neaiAnomalyDetection_text_noValue"
                android:textSize="17sp"
                android:textStyle="italic" />
        </LinearLayout>

        <!-- Progress -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="Progress: "
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:text="@string/st_neaiAnomalyDetection_text_noValue"
                android:textSize="17sp"
                android:textStyle="italic" />
        </LinearLayout>


        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/pb_progrss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:trackThickness="8dp"
            tools:progress="60" />

        <!-- Separator -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorGrey"
            android:orientation="horizontal" />

        <!-- Signal Title & Image -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/st_neaiAnomalyDetection_text_resultsTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />


        </LinearLayout>

        <!-- Status -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/neai_signal_status_image_view"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"
                android:src="@drawable/predictive_status_good"
                android:visibility="invisible"
                tools:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/st_neaiAnomalyDetection_text_statusTitle"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:text="@string/st_neaiAnomalyDetection_text_noValue"
                android:textSize="17sp"
                android:textStyle="italic" />

        </LinearLayout>

        <!-- Similarity -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/st_neaiAnomalyDetection_text_similarityTitle"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_similarity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:text="@string/st_neaiAnomalyDetection_text_noValue"
                android:textSize="17sp"
                android:textStyle="italic" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>

